# aws-a3-maestrias

./: .bedrock_agentcore.yaml  .gitignore  KNOWN_ISSUES.md  OK_PA001_MADTFIN_Fundamentos estratégicos de finanzas.docx  OK_PA002_MADTFIN_Ciencia de datos aplicada a las finanzas.docx  README.md  app.py  cdk.json  press.html  pyproject.toml  requirements-scholar.txt  requirements.txt  slides.html
.bedrock_agentcore/AcademicPipelineScholarDev/: dependencies.hash
.github/workflows/: deploy-slides.yml
.kiro/steering/: academic-domain.md  agent-development.md  coding-conventions.md  deployment-guide.md  known-patterns.md  project-overview.md  subject-json-schema.md  testing-guide.md
aidlc-docs/: aidlc-state.md  audit.md  cost-estimation.md  validation-report.md
docs/: ARCHITECTURE.md  OPERATIONS.md
src/canvas-publisher/: canvas_client.py  formatters.py
src/canvas_publisher/: canvas_client.py  html_helpers.py  mock_client.py  models.py  publisher.py
src/orchestrator/: invoke_agent.py  (+1 more)
test-data/: activate_canvas.sh  add_permissions.sh  check_final.py  check_new_content.py  check_persist.py  check_subject.py  ciencia-datos-finanzas-output.json  cleanup_dynamo.py  deploy_canvas.sh  deploy_lambdas.sh  deploy_stacks.sh  deploy_web_lambdas.sh  extract_last_json.py  extract_logs.py  fix_estadistica.py  maestria-dtfin.txt  pipeline-data-access-policy.json  review_content.py  show_readings.py  test_abstract_retrieval.py  test_scopus_abstract.py  test_scopus_abstract2.py  test_scopus_abstract3.py  test_scopus_search_fields.py  update_content_lambda.sh
tests/: e2e_test.py
(+161 files in other folders)
